# HW_11_FastAPI

./: README.md  main.py  pyproject.toml
front-end/: contacts.html  index.html
src/conf/: config.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contact.py
