[tool.poetry]
name = "hw-11-fastapi"
version = "0.1.0"
description = ""
authors = ["NataSha157 <shnataliya77@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"
pydantic = "^2.5.2"
python-multipart = "^0.0.6"
alembic = "^1.13.0"
asyncpg = "^0.29.0"
email-validator = "^2.1.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
